# ytstenut__telepathy-ytstenut

./: .gitignore  Android.mk  Makefile.am  autogen.sh  configure.ac
TelepathyFooQt4/: Makefile.am  TelepathyFooQt4-uninstalled.pc.in  TelepathyFooQt4.pc.in  cli-connection.h  connection.xml  constants.h  types.h
TelepathyYtstenutQt4/: Makefile.am  TelepathyYtstenutQt4-uninstalled.pc.in  TelepathyYtstenutQt4.pc.in  cli-connection.cpp  cli-connection.h  connection.xml  constants.h  types.cpp  types.h
doc/reference/: Makefile.am
docs/reference/: telepathy-ytstenut-glib-docs.sgml  telepathy-ytstenut-glib-sections.txt
docs/templates/: interface.html
spec/: AccountManager.xml  Account_Manager.xml  Channel.xml  Channel_Type_Ytstenut.xml  Connection_Future.xml  Status.xml  all.xml  errors.xml  types.xml
telepathy-foo-glib/: Makefile.am  all.xml  errors.c  errors.h  telepathy-foo-glib-uninstalled.pc.in  telepathy-foo-glib.c  telepathy-foo-glib.h  telepathy-foo-glib.pc.in
telepathy-ytstenut-glib/: Makefile.am  account-manager.c  account-manager.h  all.xml  channel-factory.c  channel-factory.h  channel.c  channel.h  client-factory.c  client-factory.h  client.c  client.h  errors.c  errors.h  generated.h  status.c  status.h  telepathy-ytstenut-glib-uninstalled.pc.in  telepathy-ytstenut-glib.c  telepathy-ytstenut-glib.h  telepathy-ytstenut-glib.pc.in
telepathy-ytstenut-glib/extensions/: Makefile.am  all.xml  connection-future.c  connection-future.h  extensions.c  extensions.h
telepathy-ytstenut-glib/tests/: Makefile.am  client-ping.c  client-pong.c  diddle-account-manager  diddle-account-manager.c  nosey-status.c  passing-service.c  passing-status.c  server-client-ping.c  server-client-pong.c  server-file-transfer.c  server-nosey-status.c  server-passing-service.c  server-passing-status.c
tools/: doc-generator.py
tp-glib-tools/: Makefile.am  glib-client-marshaller-gen.py
tp-qt4-tools/: Makefile.am  qt4-client-gen.py
